--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Bookmarks</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="header">
+    <div class="title-bar">
         <div>
-            <h2 class="title">AI Bookmarks Organizer</h2>
-            <p class="subtitle">Organize bookmarks with AI</p>
+            <h2>AI Bookmark Manager</h2> 
+            <p class="subheading">Manage your bookmarks with Chrome AI locally.</p>
         </div>
+        <div class="title-bar-actions">
+            <button id="add-current-bookmark" class="btn-icon" title="Add current page to bookmarks">
+                <span class="material-symbols-outlined">bookmark_add</span>
+            </button>
+            <button id="export-button" class="btn-icon" title="Export all data to JSON">
+                <span class="material-symbols-outlined">download</span>
+            </button>
+            <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </div>
+
+    <div class="header">
         <div class="search-container">
-            <input type="text" id="search-box" placeholder="Search Bookmarks...">
+            <span class="material-symbols-outlined search-icon">search</span>
+            <input type="text" id="search-box" placeholder="Filter bookmarks...">
         </div>
+        
         <div id="category-filter-pills">
-        </div>
+            </div>
     </div>
 
     <div id="results-count"></div>
@@ -38,9 +54,8 @@
     </div>
 
     <div id="results-container">
-    </div>
+        </div>
 
     <script src="popup.js"></script>
 </body>
-
 </html>
