--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Bookmarks</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="title-bar">
         <div>
-            <h2>AI Bookmark Manager</h2> 
-            <p class="subheading">Manage your bookmarks with Chrome AI locally.</p>
+            <h2>NanoMarks</h2>
+            <p class="subheading">Manage your bookmarks with on-device AI (Gemini Nano).</p>
         </div>
         <div class="title-bar-actions">
             <button id="add-current-bookmark" class="btn-icon" title="Add current page to bookmarks">
@@ -32,9 +35,9 @@
             <span class="material-symbols-outlined search-icon">search</span>
             <input type="text" id="search-box" placeholder="Filter bookmarks...">
         </div>
-        
+
         <div id="category-filter-pills">
-            </div>
+        </div>
     </div>
 
     <div id="results-count"></div>
@@ -54,8 +57,9 @@
     </div>
 
     <div id="results-container">
-        </div>
+    </div>
 
     <script src="popup.js"></script>
 </body>
+
 </html>
